made box bigger, hopefully fix overflow

--- a/resultStyle.css
+++ b/resultStyle.css
@@ -26,8 +26,8 @@ a {
 
 #results {
 	text-align: center;
-	width: 55%;
-	height: 60%;
+	width: 60%;
+	height: 65%;
 	margin: 0px;
 	padding: 20px;
 	border-radius: 25px;
